--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,11 @@
 all:
 	gcc	gimli.c -lpthread -O3 -o gimli
 
+cli:
+	gcc	gimli-cli.c -o gimli-cli
+
 debug:
 	gcc	gimli.c -lpthread -g -o gimli
 
 clean:
-	rm gimli
+	rm gimli gimli-cli
