Add interactive input to gimli-cli

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ cli:
 	gcc	gimli-cli.c -o gimli-cli
 
 debug:
-	gcc	gimli.c -lpthread -g -o gimli
+	gcc	gimli.c -lpthread -g -o gimli; gcc gimli-cli.c -g -o gimli-cli
 
 clean:
 	rm gimli gimli-cli
