Check for connection in gimli-cli

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,5 @@
-gimli:
-	gcc	gimli.c -lpthread -O3 -o gimli
-
-gimli-cli:
-	gcc	gimli-cli.c -o gimli-cli
+all:
+	gcc gimli.c -lpthread -O3 -o gimli; gcc gimli-cli.c -o gimli-cli
 
 debug:
 	gcc	gimli.c -lpthread -g -o gimli; gcc gimli-cli.c -g -o gimli-cli
