--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,11 @@
-CFLAGS = -Wall -Werror
+gimli: CFLAGS = -Wall -Werror -lpthread
+gimli-cli: CFLAGS = -Wall -Werror
 
 all: gimli gimli-cli
 
-gimli: gimli.c -lpthread
+gimli: gimli.c
 
 gimli-cli: gimli-cli.c
-
-debug:
-	gcc gimli.c -lpthread -g -o gimli && gcc gimli-cli.c -g -o gimli-cli
 
 clean:
 	rm -f gimli gimli-cli
